Combine Secret Manager secrets on deployment

--- a/gdk-config.json
+++ b/gdk-config.json
@@ -12,7 +12,7 @@
         },
         "publish": {
           "bucket": "greengrass-tts-lorawan",
-          "region": "ap-southeast-1"
+          "region": "us-east-1"
         }
       }
     },
